--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Christian Palacios">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="/assets/css/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ProyectoPWA/assets/css/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="/ProyectoPWA/assets/css/bootstrap.min.css">
   </head>
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -143,9 +143,9 @@
                     </div>
                 </div>
 
-              <script src="/assets/js/jquery.min.js"></script>
-              <script src="/assets/js/popper.min.js"></script>
-              <script src="/assets/js/bootstrap.min.js"></script>
-              <script src="/assets/js/custom.js"></script>
+              <script src="/ProyectoPWA/assets/js/jquery.min.js"></script>
+              <script src="/ProyectoPWA/assets/js/popper.min.js"></script>
+              <script src="/ProyectoPWA/assets/js/bootstrap.min.js"></script>
+              <script src="/ProyectoPWA/assets/js/custom.js"></script>
 </body>
 </html>
