--- a/index.htm
+++ b/index.htm
@@ -193,6 +193,7 @@
                     });
             }
         </script>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.js"></script>                                                               
               <script src="/assets/js/jquery.min.js"></script>
               <script src="/assets/js/popper.min.js"></script>
               <script src="/assets/js/bootstrap.min.js"></script>
