--- a/index.htm
+++ b/index.htm
@@ -45,15 +45,6 @@
                     <p class="mb-0">Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, <a href="#" class="alert-link">vel scelerisque nisl consectetur et</a>.</p>
                   </div>
               <br>
-              <div class="card text-white bg-primary mb-3" style="max-width: 30rem;">
-                    <div class="card-header">Recordatorio</div>
-                    <div class="card-body">
-                      <h4 class="card-title">Recordatorio:</h4>
-                      <p class="card-text">                      
-
-                      </p>
-                    </div>
-                </div>
                                                                                    
                                                                                    
     <!-- Navegacion -->
@@ -70,7 +61,7 @@
                     <a 
                         class="nav-link" 
                         href="#"
-                        onclick="cargarPagina('paginas/agregar.js');"
+                        onclick="cargarPagina('/paginas/agregar.js');"
                         >Agregar Recordatorio <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -78,7 +69,7 @@
                 <li class="nav-item active">
                     <a 
                         class="nav-link" 
-                        onclick="cargarPagina('paginas/listar.js');"
+                        onclick="cargarPagina('/paginas/listar.js');"
                         href="#">Listar Recordatorios
                     </a>
                 </li>
