--- a/index.htm
+++ b/index.htm
@@ -23,13 +23,10 @@
                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="#">Agregar Recordatorio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
+                      <a class="nav-link" href="#">Listar Recordatorios</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -38,12 +35,6 @@
                   </form>
                 </div>
               </nav>
-              <br>
-              <div class="alert alert-dismissible alert-warning">
-                    <button type="button" class="close" data-dismiss="alert">&times;</button>
-                    <h4 class="alert-heading">Warning!</h4>
-                    <p class="mb-0">Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, <a href="#" class="alert-link">vel scelerisque nisl consectetur et</a>.</p>
-                  </div>
               <br>
                                                                                    
                                                                                    
